2005-02-12  Per Bothner  <per@bothner.com>

	* IndirectableLocation.java (setAlias): New method.
	* Location.java (print):  Restore printing of location name.
	* LocationProc.java: Minor optimiation.
	* ProcLocation.java (setWithSave, setRestore): New methods.

	* LocationProc.java: New file, but class was extracted from
	kawa/standard/location.java.
	Add some extra "features" to support srfi-39 "parameter objects".
	* Makefile.am: Update accordingly.
	* ThreadLocation.java (setGlobal): New method.
	* Location.java (toString): Don't print property if it is this.

2005-02-11  Per Bothner  <per@bothner.com>

	* Environment.java (toString): New method.

	Fixes Savannah bug #11801.
	* Environment.java (DIRECT_INHERITED_ON_SET): New flag.
	(make(String, Environment)): Increment parent's currentTimestamp.
	* Future.java (run): Need to make child shared (THREAD_SAFE), and
	clear DIRECT_INHERITED_ON_SET bit.
	* InheritingEnvironment.java (getLocation): "Inline" addLocation.
	Only set DIRECT_ON_SET on new location if DIRECT_INHERITED_ON_SET.
	* SimpleEnvironment.java (newLocation): Don't need to increment
	timestamp, as long as it is done when a child is created by Future.run.
	(makeShared): Likewise.
	Set INDIRECT_FLUIDS on old PlainLocation so it properly redirects.

	* UnboundLocationException.java (getMessage): A Location may have
	a non-null getKeySymbol even if it isn't a NamedLocation.

	* ThreadLocation.java: New class, extends Location.
	* Makefile.am: Update accordingly.

2005-02-07  Thomas Krk  <tk@research.att.com>

	* Environment.java (make(String, Environment)): Set baseTimestamp.
	Partial fix for Savannah bug #11577.

2005-01-30  Per Bothner  <per@bothner.com>

	* WrappedException.java: Use JDK 1.4 "cause" mechanism ifdef JAVA5.
	(wrapIfNeeded): New static method.
	(message): Remove field.  Instead use getMessage() - and set
	message from cause at constructor time if needed.

2005-01-21  Per Bothner  <per@bothner.com>
